[package]
name = "aptos-pprint"
version = "0.1.1"
edition = "2021"
description = "a script that makes aptos debug message readable"
license = "MIT"
#documentation = "https://github.com/0xbe1/aptos-pprint"
repository = "https://github.com/0xbe1/aptos-pprint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
