[package]
name = "aptos-pprint"
version = "0.2.0"
edition = "2021"
description = "a script that makes aptos debug message readable"
license = "MIT"
repository = "https://github.com/0xbe1/aptos-pprint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
